--- a/insert_data.html
+++ b/insert_data.html
@@ -1,4 +1,4 @@
-<form action="insertdata.php" method="POST">
+<form action="insertdata_V2.php" method="POST">
     Name:<input type="text" name="mname"><br>
     Year:<input type="text" name="myear"><br>
     
@@ -15,8 +15,6 @@
 </form>
 
 
-
-<!-- Vi ska ta unique value på mgenre från genres table -->
 
 
 
